<resources>
    <string name="app_name">PokemonTrackerForm</string>
    <string name="pokemon_tracker">Pokemon - Tracker</string>
    <string name="register_new_catch">Register new catch</string>
    <string name="national_number">National Number</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="unk">Unk</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="base_stats">Base Stats</string>
    <string name="level">Level</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="_896">896</string>
    <string name="glastrier">Glastrier</string>
    <string name="wild_horse_pokemon">Wild Horse Pokemon</string>
    <string name="defaultMeters">2.2</string>
    <string name="meters">m</string>
    <string name="defaultKg">800.00</string>
    <string name="kilograms">Kg</string>
    <string name="defaultBaseStats">0</string>

</resources>