<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_tracker"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_new_catch"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/nationalNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/national_number"/>
        <EditText
            android:id="@+id/nationalNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/_896"/>

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/glastrier"/>

        <TextView
            android:id="@+id/speciesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"/>
        <EditText
            android:id="@+id/speciesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/wild_horse_pokemon"/>

        <TextView
            android:id="@+id/GenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/unkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unk"/>
        </RadioGroup>

        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"/>
        <EditText
            android:id="@+id/heightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/defaultMeters"/>


        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"/>
        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/defaultKg"/>


        <TextView
            android:id="@+id/levelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"/>
        <Spinner
            android:id="@+id/levelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/baseStatsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_stats"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/hpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"/>
        <EditText
            android:id="@+id/hpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/defaultBaseStats"/>

        <TextView
            android:id="@+id/attackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack"/>
        <EditText
            android:id="@+id/attackInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/defaultBaseStats"/>

        <TextView
            android:id="@+id/defenseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"/>
        <EditText
            android:id="@+id/defenseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/defaultBaseStats"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
